# saltyli.me

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  hardware_create_instructions.md  insomnia.json  sample.env
.github/workflows/: ci_action.yml  docker_action.yml
frontend.saltyli.me/: app-state.js  home.js  index.html  index.js  login.js  nav-bar.js  profile.js  side-bar.js  sw.js  user-content.js  user-graphs.js  user-home.js
frontend.saltyli.me/for_testing/: index.html
frontend.saltyli.me/static/: login.css  main.css  sidebars.css
frontend.saltyli.me/utilities/: utils.js
migrations/2018-12-05-031038_create_people_table/: up.sql
migrations/2018-12-06-070116_create_users_table/: up.sql
migrations/2019-02-20-054109_create_login_history_table/: up.sql
migrations/2019-02-21-045853_add_login_session_field_to_users_table/: down.sql  up.sql
migrations/2021-04-11-172600_group/: down.sql  up.sql
migrations/2021-04-11-210748_boxes/: down.sql  up.sql
migrations/2021-04-20-155224_fist-sensor-type/: down.sql  up.sql
migrations/2021-07-09-010226_update_sensor_types/: down.sql  up.sql
src/: constants.rs  main.rs  secret.key.sample
src/api/: account_controller.rs  hardware_controller.rs  mod.rs  sensor_controller.rs  websocket_controller.rs
src/config/: app.rs
src/middleware/: auth_middleware.rs
src/models/: boxes.rs  group.rs  hardware.rs  mod.rs  sensor.rs  sensor_log.rs  sensor_logs.rs  sensor_type.rs  sensor_types.rs  sensors.rs  user.rs  user_token.rs  websocket.rs
src/services/: account_service.rs  mod.rs
src/utils/: token_utils.rs
