[package]
name = "saltylime"
version = "0.1.0"
authors = ["connell gough <gonnellcough@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-cors = "0.5.4"
log = "0.4.14"
env_logger = "0.8.3"
diesel_migrations = "1.4.0"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
dotenv = "0.15.0"
futures = "0.3.12"
failure = "0.1.8"
derive_more = "0.99.11"
jsonwebtoken = "7.2.0"
bcrypt = "0.9.0"
passwords = "3.1.7"

[dependencies.diesel]
version = "1.4.5"
features = ["postgres", "r2d2", "chrono", "numeric"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[dev-dependencies.diesel]
version = "1.4.5"
features = ["sqlite", "r2d2", "chrono", "numeric"]
